Acceso a todos los juegos, pantallas de carga

--- a/src/app/components/carga/carga.component.html
+++ b/src/app/components/carga/carga.component.html
@@ -7,7 +7,7 @@
        <ion-card-subtitle style="margin-top: -100px;"> <label ><h2>Cargando...</h2></label></ion-card-subtitle>
      </ion-card-header>
      <ion-card-content  style="margin-top: -50px;">
-      <label ><h2> Espere por favor...</h2></label>
+      <label ><h2> Espere por favor</h2></label>
      </ion-card-content>
    </ion-card>
   </ion-slide>
