--- a/src/app/pages/jugadores/jugadores.page.html
+++ b/src/app/pages/jugadores/jugadores.page.html
@@ -1,4 +1,15 @@
-
+<ion-header>
+<ion-toolbar color="mycolor">
+  <ion-buttons 
+  slot="start">
+    <ion-back-button 
+    defaultHref="/inicio"
+    color="texto"
+    ></ion-back-button>
+  </ion-buttons>
+  <ion-title class="ion-text-capitalize"><label>Inicio</label></ion-title>
+</ion-toolbar>
+</ion-header>
 <ion-content class="ion-padding" color="mycolor2">
 <input type="" class="myinput"  color="texto" placeholder="Nickname" [(ngModel)]="nombrejugador"/>
 <ion-grid fixed>
