--- a/src/app/pages/verdad-oreto/verdad-oreto.page.html
+++ b/src/app/pages/verdad-oreto/verdad-oreto.page.html
@@ -9,7 +9,7 @@
     </ion-buttons>
     <ion-title class="ion-text-capitalize"><label>Niveles</label></ion-title>
    
-   <ion-button  slot="end" (click)="modalVerdadOReto()"fill="clear">
+   <ion-button  slot="end" (click)="modal()"fill="clear">
     <ion-icon color="texto" slot="icon-only" name="information-circle-outline"></ion-icon>
    </ion-button>
   </ion-toolbar>
