Juego de la piramide completo

--- a/src/app/pages/carta/carta.page.html
+++ b/src/app/pages/carta/carta.page.html
@@ -4,8 +4,8 @@
 
        <ion-img [src]="imagen"></ion-img>
       
-       <ion-card-content>
-      <label class="pregunta"> Aqui se mostraran las preguntas</label>
+       <ion-card-content style="padding-left: 20%; padding-right: 20%;">
+      <label class="pregunta"><h2 style="font-weight: bold;">{{mensaje}}</h2></label>
        </ion-card-content>
    
     </ion-slide>
