--- a/src/app/pages/circulo/circulo.page.html
+++ b/src/app/pages/circulo/circulo.page.html
@@ -15,7 +15,7 @@
 </ion-header>
 <ion-content color="mycolor2">
  <!-- <app-carga *ngIf="!ocultarSlider"></app-carga> -->
- <ion-img [src]="carta" style="margin-top: 20%;"></ion-img>
+ <ion-img [src]="carta" ></ion-img>
  <ion-img [src]="carta" class="r1"></ion-img>
  <ion-img [src]="carta" class="r2"></ion-img>
  <ion-img [src]="carta" class="r3"></ion-img>
@@ -42,4 +42,5 @@
  <ion-img [src]="carta" class="r24"></ion-img>
  <ion-img [src]="carta" class="r25"></ion-img>
  <ion-img [src]="carta" class="r26"></ion-img>
+
 </ion-content>
