--- a/src/app/pages/circulo/circulo.page.scss
+++ b/src/app/pages/circulo/circulo.page.scss
@@ -1,3 +1,12 @@
+.centro{
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: block;
+    position: absolute;
+}
 ion-content{
     position: relative;
     align-items: center;
@@ -7,134 +16,135 @@ ion-img{
     width: 65px;
     height: 90px;
     position: absolute;
+    margin-top: 20%;
 }
 .r1{
     transform: rotate(7.2deg);
-    margin-left: 48%;
+    margin-left: 49%;
     margin-top: 22%;
 }
 .r2{
     transform: rotate(14.4deg);
-    margin-left: 50%;
-    margin-top: 24%;
+    margin-left: 52%;
+    margin-top: 25%;
 }
 .r3{
     transform: rotate(21.6deg);
     margin-left: 52%;
-    margin-top: 26%;
+    margin-top: 27%;
 }
 .r4{
     transform: rotate(28.8deg);
     margin-left: 54%;
-    margin-top: 28%;
+    margin-top: 29%;
 }
 .r5{
     transform: rotate(36deg);
     margin-left: 56%;
-    margin-top: 30%;
+    margin-top: 31%;
 }
 .r6{
     transform: rotate(43.2deg);
     margin-left: 58%;
-    margin-top: 32%;
+    margin-top: 33%;
 }
 .r7{
     transform: rotate(50.5deg);
     margin-left: 60%;
-    margin-top: 34%;
+    margin-top: 35%;
 }.r8{
     transform: rotate(57.7deg);
     margin-left: 62%;
-    margin-top: 36%;
+    margin-top: 37%;
 }
 .r9{
     transform: rotate(64.9deg);
     margin-left: 64%;
-    margin-top: 38%;
+    margin-top: 39%;
 }
 .r10{
     transform: rotate(72.1deg);
     margin-left: 66%;
-    margin-top: 40%;
+    margin-top: 41%;
 }
 .r11{
     transform: rotate(79.3deg);
     margin-left: 68%;
-    margin-top: 42%;
+    margin-top: 43%;
 }
 .r12{
     transform: rotate(86.5deg);
     margin-left: 70%;
-    margin-top: 44%;
+    margin-top: 45%;
 }
 .r13{
     transform: rotate(93.7deg);
     margin-left: 72%;
-    margin-top: 46%;
+    margin-top: 48%;
 }
 //
 .r26{
     transform: rotate(187.3deg);
     margin-left: 48%;
-    margin-top: 72%;
+    margin-top: 84%;
 }
 .r25{
     transform: rotate(180.1deg);
     margin-left: 50%;
-    margin-top: 70%;
+    margin-top: 82%;
 }
 .r24{
     transform: rotate(172.9deg);
     margin-left: 52%;
-    margin-top: 68%;
+    margin-top: 80%;
 }
 .r23{
     transform: rotate(165.7deg);
     margin-left: 54%;
-    margin-top: 66%;
+    margin-top: 78%;
 }
 .r22{
     transform: rotate(158.5deg);
     margin-left: 56%;
-    margin-top: 64%;
+    margin-top: 76%;
 }
 .r21{
     transform: rotate(151.3deg);
     margin-left: 58%;
-    margin-top: 62%;
+    margin-top: 74%;
 }
 .r20{
     transform: rotate(144.1deg);
     margin-left: 60%;
-    margin-top: 60%;
+    margin-top: 72%;
 }
 .r19{
     transform: rotate(136.9deg);
     margin-left: 62%;
-    margin-top: 58%;
+    margin-top: 70%;
 }
 .r18{
     transform: rotate(129.7deg);
     margin-left: 64%;
-    margin-top: 56%;
+    margin-top: 68%;
 }
 .r17{
     transform: rotate(122.5deg);
     margin-left: 66%;
-    margin-top: 54%;
+    margin-top: 66%;
 }
 .r16{
     transform: rotate(115.3deg);
     margin-left: 68%;
-    margin-top: 52%;
+    margin-top: 64%;
 }
 .r15{
     transform: rotate(108.1deg);
     margin-left: 70%;
-    margin-top: 50%;
+    margin-top: 62%;
 }
 .r14{
     transform: rotate(100.9deg);
     margin-left: 72%;
-    margin-top: 48%;
+    margin-top: 60%;
 }
