--- a/src/app/pages/niveles/niveles.page.scss
+++ b/src/app/pages/niveles/niveles.page.scss
@@ -1,9 +1,9 @@
 
 ion-card {
-background: #a511ad;
+background: #fff !important;
 }
 .selected{
-    background-color: #60157a !important;
+    background-color: #845899 !important;
 }
 ion-checkbox{
     position: relative;
