--- a/src/app/pages/piramide/piramide.page.html
+++ b/src/app/pages/piramide/piramide.page.html
@@ -18,7 +18,7 @@
 <ion-content class="ion-no-padding" style="text-align: center;" color="mycolor2">
   
   <app-carga *ngIf="!mostrar"></app-carga>
-  <ion-grid style="text-align: center;" *ngIf="mostrar">
+  <ion-grid style="text-align: center; padding-top: 20%;" *ngIf="mostrar">
    
     
     <ion-row text-center>
