--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -159,7 +159,7 @@
 --ion-color-mycolor: #845899;
 --ion-color-mycolor2: #07d2f2;
 --ion-color-texto: #ffffff;
---ion-color-footer: #7e5692;
+--ion-color-footer: #82688E;
   }
 
   /*
