--- a/src/app/pages/verdad-oreto/verdad-oreto.page.html
+++ b/src/app/pages/verdad-oreto/verdad-oreto.page.html
@@ -20,9 +20,12 @@
  <app-carga *ngIf="ocultarSlider"></app-carga>
 <!--Aqui sera para que rote la cosa-->
 <div style=" position: relative; height: 100%; width: 100%;" *ngIf="rotacion && !ocultarSlider" >
-<ion-img class="ruleta" [src]="imgRuleta"></ion-img>
-<ion-img class="imgBotella" *ngIf="rotarImg" [ngClass]="{rotarImagen: rotarImg}"  [src]="botella"></ion-img>
-
+<ion-img  class="ruleta" [src]="imgRuleta"></ion-img>
+<ion-img class="imgBotella"  [ngClass]="{rotarImagen: rotarImg}"  [src]="botella"></ion-img>
+<br>
+<center>
+<button expand="block" (click)="ruleta()" style="margin-top:140%; width: 75%;"   class="btn-3d">Girar</button>
+</center>
 </div>
  <!--Mostrar la verdad o el reto-->
   <ion-slides pager="ios" class="slide-full" *ngIf="!ocultarSlider && !final && !rotacion">
@@ -41,7 +44,7 @@
         <label >  <h1>{{preguntaMostrar.pregunta}}</h1></label>
        </ion-card-content>
        <br>
-        <button expand="block" (click)="ruleta()" style="margin-top: 70px;"   class="btn-3d">Siguiente</button>
+        <button expand="block" (click)="cambioARuleta()" style="margin-top: 70px;"   class="btn-3d">Siguiente</button>
      </ion-card> 
     </ion-slide>
   </ion-slides>
