--- a/src/app/pages/verdad-oreto/verdad-oreto.page.scss
+++ b/src/app/pages/verdad-oreto/verdad-oreto.page.scss
@@ -10,18 +10,21 @@
     position: relative;
   
 }
-.imgBotella{
-    height: 300px;
-   // margin-left: 25%; 
-    margin-top: 47%;
-    position: absolute;
+.imgBotella{ 
+    position:absolute;
+    height:30%;
+    width:30%;
+    margin-left: 25.5%;
+    margin-top: 60%;
+    left : 40px;
+    z-index: 1;
 }
 .ruleta{
     position:absolute;
     height:60%;
     width:80%;
     margin-left:10%;
-    margin-top: 40%;
+    margin-top: 35%;
     z-index: -1;
 }
 .rotarImagen{
@@ -29,12 +32,12 @@
     height:30%;
     width:30%;
     margin-left: 25.5%;
-    margin-top: 65%;
+    margin-top: 60%;
     left : 40px;
     z-index: 1;
-   -webkit-animation: spin 3s linear infinite;
-    -moz-animation: spin 3s linear infinite ;
-    animation: spin 3s linear infinite;
+   -webkit-animation: spin 1s linear infinite;
+    -moz-animation: spin 1s linear infinite ;
+    animation: spin 1s linear infinite;
     
 }
 /*para rotacion*/
