--- a/src/app/pages/circulo/circulo.page.html
+++ b/src/app/pages/circulo/circulo.page.html
@@ -15,6 +15,7 @@
 </ion-header>
 <ion-content color="mycolor2">
  <!-- <app-carga *ngIf="!ocultarSlider"></app-carga> -->
+ <img src="assets/img/tituloCirculo.png" style="height: 100px; position: absolute; left: 35%; top: 3%;"  >
  <ion-img [src]="carta" ></ion-img>
  <ion-img [src]="carta" class="r1"></ion-img>
  <ion-img [src]="carta" class="r2"></ion-img>
@@ -28,7 +29,10 @@
  <ion-img [src]="carta" class="r10"></ion-img>
  <ion-img [src]="carta" class="r11"></ion-img>
  <ion-img [src]="carta" class="r12"></ion-img>
+ 
  <ion-img [src]="carta" class="r13"></ion-img>
+
+
  <ion-img [src]="carta" class="r14"></ion-img>
  <ion-img [src]="carta" class="r15"></ion-img>
  <ion-img [src]="carta" class="r16"></ion-img>
@@ -41,6 +45,6 @@
  <ion-img [src]="carta" class="r23"></ion-img>
  <ion-img [src]="carta" class="r24"></ion-img>
  <ion-img [src]="carta" class="r25"></ion-img>
- <ion-img [src]="carta" class="r26"></ion-img>
 
+ <ion-img [src]="carta" class="r26"></ion-img>
 </ion-content>
