--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,30 @@
 <ion-app>
   <ion-menu menuId='menu-main' class="ion-no-border" class="ion-no-padding" content-id='main'>
-    <ion-header >
+    <ion-header>
       <ion-toolbar color="mycolor" class="ion-no-border" class="ion-no-padding">
         <ion-title color="texto">Barbados 1569</ion-title>
       </ion-toolbar>
-    </ion-header >
-    
-    <ion-content color="mycolor2" class="ion-no-border" class="ion-no-padding">
-      <ion-img style="width: 100%;" src="/assets/gif/inicio.gif"></ion-img>
+    </ion-header>
+
+    <ion-content color="mycolor2" class="ion-no-border" class="ion-no-padding" no-bounce>
+      <ion-img style="width: 95%; margin-left: auto; margin-right: auto;" src="/assets/img/barbados1569.png"></ion-img>
       <!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/921426" class="snapwidget-widget" allowtransparency="true" frameborder="0" 
-scrolling="no" style="border:none; overflow:hidden;  width:100%; height:500%; top: auto; bottom: auto;"></iframe>
+      <iframe src="https://snapwidget.com/embed/923719" class="snapwidget-widget" allowtransparency="true"
+        frameborder="0" scrolling="no"
+        style="border:none; overflow:hidden;  width:100%; height:110%;"></iframe>
 
-  </ion-content>
-  <ion-list class="ion-no-border" class="ion-no-padding">
+    </ion-content>
+    <ion-list class="ion-no-border" class="ion-no-padding">
 
-    <ion-menu-toggle *ngFor="let c of redesSociales | async" autoHide="false">
-      <ion-item detail (click)="abrirSosial(c.redirectTo)" color="mycolor2">
-        <ion-icon [name]="c.icon" color="texto" slot="start" ></ion-icon>
-        <ion-label color="texto"> {{c.name}}</ion-label> 
-      </ion-item>
-    </ion-menu-toggle>
+      <ion-menu-toggle *ngFor="let c of redesSociales | async" autoHide="false">
+        <ion-item detail (click)="abrirSosial(c.redirectTo)" color="mycolor2">
+          <ion-icon [name]="c.icon" color="texto" slot="start"></ion-icon>
+          <ion-label color="texto"> {{c.name}}</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
 
 
-  </ion-list>
+    </ion-list>
   </ion-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
