--- a/src/app/pages/verdad-oreto/verdad-oreto.page.html
+++ b/src/app/pages/verdad-oreto/verdad-oreto.page.html
@@ -20,8 +20,10 @@
  <app-carga *ngIf="ocultarSlider"></app-carga>
 <!--Aqui sera para que rote la cosa-->
 <div style=" position: relative; height: 100%; width: 100%;" *ngIf="rotacion && !ocultarSlider" >
+  
+  <img src="assets/img/vod.png" style="height: 100px; position: absolute; left: 27%; top: 3%;"  >
 <ion-img  class="ruleta" [src]="imgRuleta"></ion-img>
-<ion-img class="imgBotella"  [ngClass]="{rotarImagen: rotarImg}"  [src]="botella"></ion-img>
+<ion-img class="imgBotella" [ngClass]="{rotarImagen: rotarImg, desafio: desafio,verdad: verdad}"  [src]="botella"></ion-img>
 <br>
 <center>
 <button expand="block" (click)="ruleta()" style="margin-top:140%; width: 75%;"   class="btn-3d">Girar</button>
