--- a/src/app/pages/verdad-oreto/verdad-oreto.page.scss
+++ b/src/app/pages/verdad-oreto/verdad-oreto.page.scss
@@ -27,6 +27,26 @@
     margin-top: 35%;
     z-index: -1;
 }
+.verdad{
+    position:absolute;
+    height:30%;
+    width:30%;
+    margin-left: 25.5%;
+    margin-top: 60%;
+    left : 40px;
+    z-index: 1;
+    transform: rotate(12deg) !important;
+}
+.desafio{
+    position:absolute;
+    height:30%;
+    width:30%;
+    margin-left: 25.5%;
+    margin-top: 60%;
+    left : 40px;
+    z-index: 1;
+    transform: rotate(150deg) !important;
+}
 .rotarImagen{
     position:absolute;
     height:30%;
