--- a/src/app/pages/circulo/circulo.page.scss
+++ b/src/app/pages/circulo/circulo.page.scss
@@ -1,150 +1,55 @@
-.centro{
-    width: 200px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: block;
-    position: absolute;
+.circle-container { 
+    top:20%;
+    position: relative; 
+    width: 24em; 
+    height: 24em; 
+    padding: 2.8em; 
+    border: dashed 1px; 
+    border-radius: 50%; 
+    margin: 1.75em auto 0; 
+} 
+.circle-container a { 
+    display: block; 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    width: 4em; 
+    height: 4em; 
+    margin: -2em; 
 }
-ion-content{
-    position: relative;
-    align-items: center;
+.center{
+    width: 50%;
 }
-ion-img{
-    margin-left: 45%;
-    width: 65px;
-    height: 90px;
-    position: absolute;
-    margin-top: 41%;
-}
-.r1{
-    transform: rotate(7.2deg);
-    margin-left: 47.7%;
-    margin-top: 44.2%;
-}
-.r2{
-    transform: rotate(14.4deg);
-    margin-left: 50.4%;
-    margin-top: 47.4%;
-}
-.r3{
-    transform: rotate(21.6deg);
-    margin-left: 53.1%;
-    margin-top: 50.6%;
-}
-.r4{
-    transform: rotate(28.8deg);
-    margin-left: 55.8%;
-    margin-top: 53.8%;
-}
-.r5{
-    transform: rotate(36deg);
-    margin-left: 58.5%;
-    margin-top: 57%;
-}
-.r6{
-    transform: rotate(43.2deg);
-    margin-left: 61.2%;
-    margin-top: 60.2%;
-}
-.r7{
-    transform: rotate(50.5deg);
-    margin-left: 63.9%;
-    margin-top: 63.4%;
-}.r8{
-    transform: rotate(57.7deg);
-    margin-left: 66.6%;
-    margin-top: 66.6%;
-}
-.r9{
-    transform: rotate(64.9deg);
-    margin-left: 69.3%;
-    margin-top: 69.8%;
-}
-.r10{
-    transform: rotate(72.1deg);
-    margin-left: 72%;
-    margin-top: 73%;
-}
-.r11{
-    transform: rotate(79.3deg);
-    margin-left: 74.7%;
-    margin-top: 76.2%;
-}
-.r12{
-    transform: rotate(86.5deg);
-    margin-left: 77.4%;
-    margin-top: 79.4%;
-}
-.r13{
-    transform: rotate(89.7deg);
-    margin-left: 80%;
-    margin-top: 82.6%;
-}
-//
-.r26{
-    transform: rotate(179.4deg);
-    margin-left: 48.8;
-    margin-top: 125.4%;
-}
-.r25{
-    transform: rotate(180.1deg);
-    margin-left: 50%;
-    margin-top: 122.2%;
-}
-.r24{
-    transform: rotate(172.9deg);
-    margin-left: 51.4%;
-    margin-top: 119%;
-}
-.r23{
-    transform: rotate(165.7deg);
-    margin-left: 54%;
-    margin-top: 115.8%;
-}
-.r22{
-    transform: rotate(158.5deg);
-    margin-left: 56.6%;
-    margin-top: 112.6%;
-}
-.r21{
-    transform: rotate(151.3deg);
-    margin-left: 59.2%;
-    margin-top: 109.4%;
-}
-.r20{
-    transform: rotate(144.1deg);
-    margin-left: 61.8%;
-    margin-top: 106.2%;
-}
-.r19{
-    transform: rotate(136.9deg);
-    margin-left: 64.4%;
-    margin-top: 103%;
-}
-.r18{
-    transform: rotate(129.7deg);
-    margin-left:67%;
-    margin-top: 99.8%;
-}
-.r17{
-    transform: rotate(122.5deg);
-    margin-left: 66%;
-    margin-top: 97%;
-}
-.r16{
-    transform: rotate(115.3deg);
-    margin-left: 72.2%;
-    margin-top: 93.4%;
-}
-.r15{
-    transform: rotate(108.1deg);
-    margin-left:74.8%;
-    margin-top: 89.8%;
-}
-.r14{
-    transform: rotate(100.9deg);
-    margin-left: 77.4%;
-    margin-top: 86.2%;
+.circle-container img { 
+    display: block; 
+    width: 100%; 
+} 
+.deg0 { 
+    transform: rotate(0deg) 
+    translate(10em) 
+    rotate(90deg);     
+ }  
+.deg45 { 
+     transform: rotate(45deg) 
+     translate(10em)  
+     rotate(-45deg); 
+    } 
+.deg135 { 
+    transform: rotate(135deg) 
+    translate(10em) 
+    rotate(-135deg); 
+} 
+.deg180 { 
+    transform: rotate(180deg) 
+    translate(10em) 
+    rotate(90deg);
+} 
+.deg225 { 
+    transform: rotate(225deg) 
+    translate(10em) 
+    rotate(-225deg); 
+} .deg315 { 
+    transform: rotate(315deg) 
+    translate(10em) 
+    rotate(-315deg); 
 }
