--- a/src/app/pages/circulo/circulo.page.html
+++ b/src/app/pages/circulo/circulo.page.html
@@ -15,13 +15,58 @@
   <img src="assets/img/tituloCirculo.png" style="height: 100px; position: absolute; left: 35%; top: 3%;">
   <div class='circle-container'>
     <a class='center'><img [src]='centro'></a>
-    <a class='deg0'><img [src]='carta'></a>
-    <a class='deg45'><img [src]='carta'></a>
-    <a class='deg135'><img [src]='carta'></a>
-    <a class='deg180'><img [src]='carta'></a>
-    <a class='deg225'><img [src]='carta'></a>
-    <a class='deg315'><img [src]='carta'></a>
-
+    <a class='deg0'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg6-92'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg13-84'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg20-04'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg26-96'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg33-88'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg40-8'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg47-72'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg54-64'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg61-56'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg68-48'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg75-4'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg82-32'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg89-24'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg96-16'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg103-08'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg110'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg116-92'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg123-84'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg130-76'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg137-68'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg144-6'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg151-52'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg158-44'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg165-36'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg172-28'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg179-2'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg186-12'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg193-04'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg199-96'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg206-88'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg213-8'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg220-72'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg227-64'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg234-56'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg241-48'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg248-4'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg255-32'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg262-24'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg269-16'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg276-08'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg283'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg289-92'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg296-84'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg303-76'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg310-68'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg317-6'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg324-52'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg331-44'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg338-36'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg345-28'><img [src]='carta' (click)='cambiar()'></a>
+    <a class='deg352-2'><img [src]='carta' (click)='cambiar()'></a>
 
   </div>
 
