--- a/src/app/pages/circulo/circulo.page.scss
+++ b/src/app/pages/circulo/circulo.page.scss
@@ -13,8 +13,8 @@
     position: absolute; 
     top: 50%; 
     left: 50%; 
-    width: 4em; 
-    height: 4em; 
+    width: 65px;
+    height: 90px; 
     margin: -2em; 
 }
 .center{
@@ -28,28 +28,259 @@
     transform: rotate(0deg) 
     translate(10em) 
     rotate(90deg);     
- }  
-.deg45 { 
-     transform: rotate(45deg) 
-     translate(10em)  
-     rotate(-45deg); 
-    } 
-.deg135 { 
-    transform: rotate(135deg) 
+ }
+ .deg6-92 { 
+    transform: rotate(6.92deg) 
     translate(10em) 
-    rotate(-135deg); 
-} 
-.deg180 { 
-    transform: rotate(180deg) 
+    rotate(90deg);     
+ } 
+ .deg13-84 { 
+    transform: rotate(13.84deg) 
     translate(10em) 
-    rotate(90deg);
-} 
-.deg225 { 
-    transform: rotate(225deg) 
+    rotate(90deg);     
+ } 
+ .deg20-04 { 
+    transform: rotate(20.04deg) 
     translate(10em) 
-    rotate(-225deg); 
-} .deg315 { 
-    transform: rotate(315deg) 
+    rotate(90deg);     
+ } 
+ .deg26-96 { 
+    transform: rotate(26.96deg) 
     translate(10em) 
-    rotate(-315deg); 
-}
+    rotate(90deg);     
+ } 
+ .deg33-88 { 
+    transform: rotate(33.88deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg40-8 { 
+    transform: rotate(40.8deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg47-72 { 
+    transform: rotate(47.72deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg54-64 { 
+    transform: rotate(54.64deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg61-56 { 
+    transform: rotate(61.56deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg68-48 { 
+    transform: rotate(68.48deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg75-4 { 
+    transform: rotate(75.4deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg82-32 { 
+    transform: rotate(82.32deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg89-24 { 
+    transform: rotate(89.24deg) 
+    translate(10em) 
+    rotate(90deg);     
+ }
+ .deg96-16 { 
+    transform: rotate(96.16deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg103-08 { 
+    transform: rotate(103.08deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg110 { 
+    transform: rotate(110deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg116-92 { 
+    transform: rotate(116.92deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg123-84 { 
+    transform: rotate(123.84deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg130-76 { 
+    transform: rotate(130.76deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg137-68 { 
+    transform: rotate(137.68deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg144-6 { 
+    transform: rotate(144.6deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg151-52 { 
+    transform: rotate(151.52deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg158-44 { 
+    transform: rotate(158.44deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg165-36 { 
+    transform: rotate(165.36deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg172-28 { 
+    transform: rotate(172.28deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg179-2 { 
+    transform: rotate(179.2deg) 
+    translate(10em) 
+    rotate(90deg);     
+ }
+ .deg186-12 { 
+    transform: rotate(186.12deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg193-04 { 
+    transform: rotate(193.04deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg199-96 { 
+    transform: rotate(199.96deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg206-88 { 
+    transform: rotate(206.88deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg213-8 { 
+    transform: rotate(213.8deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg220-72 { 
+    transform: rotate(220.72deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg227-64 { 
+    transform: rotate(227.64deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg234-56 { 
+    transform: rotate(234.56deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg241-48 { 
+    transform: rotate(241.48deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg248-4 { 
+    transform: rotate(248.4deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg255-32 { 
+    transform: rotate(255.32deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg262-24 { 
+    transform: rotate(262.24deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg269-16 { 
+    transform: rotate(269.16deg) 
+    translate(10em) 
+    rotate(90deg);     
+ }
+ .deg276-08 { 
+    transform: rotate(276.08deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg283 { 
+    transform: rotate(283deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg289-92 { 
+    transform: rotate(289.92deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg296-84 { 
+    transform: rotate(296.84deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg303-76 { 
+    transform: rotate(303.76deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg310-68 { 
+    transform: rotate(310.68deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg317-6 { 
+    transform: rotate(317.6deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg324-52 { 
+    transform: rotate(324.52deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg331-44 { 
+    transform: rotate(331.44deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg338-36 { 
+    transform: rotate(338.36deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg345-28 { 
+    transform: rotate(345.28deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
+ .deg352-2 { 
+    transform: rotate(350.2deg) 
+    translate(10em) 
+    rotate(90deg);     
+ } 
